message Item {
    required uint32 item_id = 1;
    required uint32 count = 2;
};
message EnterChatRequest {
    required uint32 user_id = 1;
    required string token = 2;
};

message SendGiftMessage{
    required string nick_name = 1;
    required string target_nick_name = 2;
    required uint32 item_id = 3;
    optional uint32 user_id = 4;
}

message KnockoutPrizeMessage{
    required int32 price = 1;
    required int32 time_left = 2;
    required int32 game_type = 3;
};
message FruitPoolMessage{
    required string tencent_nick_name = 1;
    optional uint64 currency = 2;
    optional uint32 user_id = 3;
};

message UrgentMessage{
    required string text = 1;
    required uint64 duration = 2;
    required uint32 type = 3;
};

message UrgentEventsList {
    repeated UrgentMessage messages = 1;
};

message DelSystemEventRequest {
    required uint32 event_index = 1;
    optional string package_type = 2 [default='default'];
};

message GamePeriodMessage{
    required int32 game_type = 1;
    required int32 minutes = 2;
    required bool switch = 3;
};

message TurnerMessage{
    required string tencent_nick_name = 1;
    required uint64 currency = 2;
    optional uint32 user_id = 3;
    optional string tencent_figure_url = 4;
    repeated SpecialItemID cur_special_items = 5;
    required uint32 vip_title = 6;
    required string tencent_gender = 7;
};

message SpecialItem {
    required uint32 item_id = 1;
    required int32 life_time = 2;    
};

message VipMessage{
    required string nick_name = 1;
    required uint32 vip_title = 2;
    optional uint32 user_id = 3;
};

message GameHighestAward{
    required uint32 user_id = 1;
    required string tencent_nick_name = 2;
    required uint64 currency = 3;
    required uint32 multiple = 4;
    required uint32 level = 5;  
};

message StoreChargeMessage{
    required uint32 user_id = 1;
    required uint32 item_id = 2;
    required uint32 count = 3;
    repeated ItemChange item_change = 4;
};

message JackpotChargeMessage {
    required uint32 user_id = 1;
    required uint64 jackpot_award = 2;
    required string tencent_nick_name = 3;
    required uint64 jackpot_currency = 4;
    optional bool show_ani = 5;
};

message SystemMessagePerPt {
    required SystemMessage message = 1;
    optional string package_type = 2 [default='default'];
}

message SystemEventsList {
    repeated SystemMessagePerPt messages = 1;
};

message SystemMessage{
    required string text = 1;
}

message OnlineTimeRequest{
    required uint32 user_id = 1;
};

message BulletinRequest {
    required uint32 user_id = 1;
};

message TextSpeakerRequest {
    // group 0 means all online player
    required uint32 group_id = 1;
    required string text = 2;
};

message DelUrgentEventRequest {
    required uint32 event_index = 1;
};

message GameMessage{
    required string tencent_nick_name = 1;
    required uint64 currency = 2;
    required uint32 user_id = 3;
    required uint32 multiple = 4;
    required uint32 level = 5;
};

message SavingPotGetResponse{
    required uint32 user_id = 1;
    required uint32 saving_currency = 2;    
    required uint32 delta_currency = 3;
};

message ScoreWallMessage{
    required string nick_name = 1;
    required uint64 currency = 2;
    optional uint32 user_id = 3;
};

message FruitMessage{
    required string tencent_nick_name = 1;
    optional uint64 currency = 2;
    optional uint32 user_id = 3;
};

message FirstAward{
    optional HundredPoolMessage hundred = 1;
    repeated GameHighestAward games = 2;
    optional FruitPoolMessage fruit = 3;
    optional TurnerMessage turner = 4;
};

message SpecialItemID {
    required uint32 item_id = 1;
};

message FortuneCatMessage{
    required string nick_name = 1;
    required uint64 currency = 2;
    optional uint32 user_id = 3;
};

message HundredPoolMessage{
    required string tencent_nick_name = 1;
    optional uint64 currency = 2;
    optional uint32 user_id = 3;
};

message TextSpeakerResponse {
    required uint64 currency = 1;
    repeated Item items = 2;
};

message EnterChatResponse {
};

message UpdateProfileRequest {
    required uint32 user_id = 1;
    optional string nick_name = 2;
    optional string avatar_url = 3;
    optional bool is_active = 4;
    optional uint32 figure_prefix = 5;
};
message SavingPotInfoRequest{
    required uint32 user_id = 1;
};

message SavingPotInfoResponse{
    required uint32 user_id = 1;
    required uint32 saving_currency = 2;
};

message OnlineTimeResponse{
    required uint32 gamed_time = 1;
};

message SpeakerMessage {
    required string sender = 1;
    required string text = 2;
    optional uint32 user_id = 3;
};
message SavingPotGetRequest{
    required uint32 user_id = 1;
    required uint32 item_id = 2;
};

message ItemChange{
    required uint32 item_id = 1;
    required uint32 delta = 2;
    required uint32 cur_count = 3;
};

message AwardSavingPot{
    required uint32 count = 1;
    required uint32 cur_count = 2;  
};

message SpecialItemMessage {
    required uint32 user_id = 1;
    repeated SpecialItem special_items = 2;
};

message HundredMessage{
    required string tencent_nick_name = 1;
    optional uint64 currency = 2;
    optional uint32 user_id = 3;
    optional bool is_dealer = 4;
};

